# packybara-grpc

./: Cargo.toml  Makefile  README.md  build.rs
proto/: packybara.proto
src/: client.rs  client_service.rs  database_config.rs  lib.rs  server.rs  service.rs  url.rs  url_builder.rs  utils.rs
src/client/: changes.rs  distributions.rs  levels.rs  packages.rs  pkgcoords.rs  platforms.rs  revisions.rs  roles.rs  sites.rs  versionpin.rs  versionpin_withs.rs  versionpins.rs  withs.rs
src/client_service/: changes.rs  distributions.rs  levels.rs  packages.rs  packages_xml.rs  pkgcoords.rs  platforms.rs  revisions.rs  roles.rs  sites.rs  versionpin.rs  versionpin_withs.rs  versionpins.rs  withs.rs
src/service/: changes.rs  distributions.rs  get_changes.rs  get_levels.rs  get_packages.rs  get_platforms.rs  get_roles.rs  get_sites.rs  get_version_pin.rs  get_version_pin_withs.rs  get_version_pins.rs  get_withs.rs  levels.rs  packages.rs  packages_xml.rs  pkgcoords.rs  platforms.rs  revisions.rs  roles.rs  sites.rs  version_pin.rs  version_pin_withs.rs  version_pins.rs  withs.rs
