[package]
name = "packybara-grpc"
version = "0.3.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "packybara-grpc-server"
path = "src/bin/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "packybara-grpc-client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5.3"
packybara = {git= "https://github.com/jlgerber/packybara", tag="async_v0.55.0"}

[build-dependencies]
tonic-build = "0.1.1"