[package]
name = "packybara-grpc"
version = "0.24.0"
authors = ["jlgerber <jlgerber@gmail.com>"]
edition = "2018"

[[bin]] 
name = "packybara-grpc-server"
path = "src/bin/server.rs"

[[bin]] 
name = "packybara-grpc-client"
path = "src/bin/client.rs"

[dependencies]
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5.3"
packybara = {git= "https://github.com/jlgerber/packybara", tag="async_v0.64.1"}
structopt = "0.3.12"
url = "2.1.1"
log = "0.4.8"
snafu = "0.6.3"
prettytable-rs = "0.8.0"
serde_json = "1.0.48"
chrono = "0.4.11"
env_logger = "0.7.1"
whoami = "0.8.1"
deadpool-postgres = "0.5.5"
num_cpus = "1.12.0"

[build-dependencies]
tonic-build = "0.1.1"
